# usda-csb

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  biome.json  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: deploy-pages.yml
app/: main.js  style.css
scripts/: download-csb.sh
src/usda_csb/: __init__.py  build_pmtiles.py  cli.py  convert_csb_to_geoparquet.py
